add prettier conf

--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "husky": "^4.2.3",
     "lint-staged": "^10.0.7",
     "sort-package-json": "^1.40.0",
-    "tslib-cli": "^6.0.9"
+    "tslib-cli": "^6.0.9",
+    "tslint-config-prettier": "^1.18.0"
   },
   "peerDependencies": {},
   "klap": {
