--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
   "editor.formatOnSave": true,
-  "editor.insertSpaces": false
+  "editor.insertSpaces": false,
+  "tslint.configFile": "tslint.config.json"
 }
