--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "bson": "^4.0.3"
   },
   "devDependencies": {
+    "@types/bson": "^4.0.1",
     "@types/jest": "^25.1.3",
     "husky": "^4.2.3",
     "lint-staged": "^10.0.7",
