--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "devDependencies": {
     "@types/bson": "^4.0.1",
     "@types/jest": "^25.1.3",
+    "@types/lodash": "^4.14.149",
     "husky": "^4.2.3",
     "lint-staged": "^10.0.7",
     "sort-package-json": "^1.40.0",
