--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
   },
   "prettier": "tslib-cli",
   "dependencies": {
-    "bson": "^4.0.3"
+    "bson": "^4.0.3",
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "@types/bson": "^4.0.1",
